# spotify-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  spec.md
.github/workflows/: build_and_release.yml
src/: audio.rs  auth.rs  controller.rs  logging.rs  main.rs  model.rs  view.rs
src/controller/: input.rs  mod.rs  navigation.rs  playback.rs  player_events.rs
src/model/: app_model.rs  cache.rs  content.rs  mod.rs  playback.rs  spotify_client.rs  types.rs
src/view/: content.rs  layout.rs  mod.rs  overlays.rs  progress.rs  utils.rs
