[package]
name = "spotify-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
librespot = "0.8.0"
ratatui = "0.30.0"
rspotify = "0.15.3"
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
chrono = "0.4.42"
librespot-oauth = "0.8.0"
crossterm = "0.29"
hostname = "0.4"
futures = "0.3.31"
serde_json = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
